@@ -319,7 +319,7 @@ public class ValueHelper
                         // Ignore, try next type
                     }
                     if (new_value instanceof String[])
-                        return VStringArray.of(List.of((String[]) new_value), Alarm.none(), Time.now());
+                        return VStringArray.of(Arrays.asList((String[]) new_value), Alarm.none(), Time.now());
                     if (new_value instanceof List)
                     {   // Assert each list element is a String
                         final List<String> strings = new ArrayList<>();
@@ -373,10 +373,10 @@ public class ValueHelper
         if (type == VStringArray.class)
         {   // Pass String
             if (new_value instanceof String)
-                return VStringArray.of(List.of((String) new_value), Alarm.none(), Time.now());
+                return VStringArray.of(Arrays.asList((String) new_value), Alarm.none(), Time.now());
             // Pass String[]
             if (new_value instanceof String[])
-                return VStringArray.of(List.of((String[]) new_value), Alarm.none(), Time.now());
+                return VStringArray.of(Arrays.asList((String[]) new_value), Alarm.none(), Time.now());
             if (new_value instanceof List)
             {   // Assert each list element is a String
                 final List<String> strings = new ArrayList<>();
